examples/test/testpolicy39.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy39
  namespace: namespace4
spec:
  podSelector:
    matchLabels:
      key27: value15
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key0: value11
      podSelector:
        matchLabels:
          key1: value28
          key9: value29
          key3: value43
